src/new.sass
@import "~@fortawesome/fontawesome-free/scss/variables"
@import "~@fortawesome/fontawesome-free/scss/mixins"
@import "~@fortawesome/fontawesome-free/scss/core"
@import "~@fortawesome/fontawesome-free/scss/icons"

// ~@fortawesome/fontawesome-free/scss/brands
@font-face
  font-family: 'Font Awesome 5 Brands'
  font-display: $fa-font-display
  src: url('../helper/dist/fa-brands-400.woff2') format('woff2')
.fab
  font-family: 'Font Awesome 5 Brands'

// ~@fortawesome/fontawesome-free/scss/solid
@font-face
  font-family: 'Font Awesome 5 Free'
  font-weight: 900
  font-display: $fa-font-display
  src: url('../helper/dist/fa-solid-900.woff2') format('woff2')
.fa, .fas
  font-family: 'Font Awesome 5 Free'
  font-weight: 900

@font-face
  font-family: Twitter Color Emoji
  src: url("../helper/dist/twemoji-14.0.1.woff2")
  font-display: swap

@font-face
  font-family: Symbola
  src: url("../helper/dist/Symbola-14.00.woff2")
  font-display: swap

@font-face
  font-family: LastResort
  src: url("LastResort-6.0d1e3.ttf")
  font-display: swap

@font-face
  font-family: AdobeBlank
  src: url("AdobeBlank-1.045.otf.woff")
  font-display: swap

$interface-font: system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue LT Std, Helvetica Neue, Helvetica, sans-serif
$display-font: Symbola // FIXME Symbola, <any local font>, LastResort, AdobeBlank

$choice-cell-size: 2.5rem
$choice-glyph-size: 1.5rem

*
  box-sizing: border-box

:root
  // prevent scrollbar flapping when zoomed
  overflow: hidden

body
  margin: 0

.Charming
  // better than 100vh on iOS
  position: absolute
  top: 0
  bottom: 0
  left: 0
  right: 0

  display: flex
  flex-direction: column
  font-family: $interface-font

  .Detail
    flex: 1 0 10em

    > .big
      $choice-glyph-size: 4rem
      $box-size: 6rem

      font-size: $choice-glyph-size
      line-height: $box-size/$choice-glyph-size

  .Map
    flex: 1 0 10em

    &.measurer
      overflow-y: scroll

  .Search
    padding: 0

@media (min-width: 384px)
  .Charming
    .Search
      padding: 1em 1em 0 1em

@media (min-width: 512px)
  .Charming
    flex-direction: row

    .Detail
      flex: 1 0 16em

      > a.big
        $glyph-size: 8rem
        $box-size: 12rem

        font-size: $glyph-size
        line-height: $box-size/$glyph-size

    .Map
      flex: 3 0 16em

.Detail
  padding: 1em
  overflow: auto
  position: relative

  *
    margin-top: 0
    margin-bottom: 0

  * + *
    margin-top: 0.5em

  > .loading
    font-size: 13em
    text-align: center
    color: #C0C0C0

  > .toolbar
    position: absolute
    top: 1rem
    font-size: 1.5rem
    margin: 0

    &[aria-label=search]
      left: 1rem

    &[aria-label=source]
      right: 1rem

  > h1
    font-size: 1.5em
    text-align: center

  > .big
    display: block
    margin: 0
    text-align: center
    text-decoration: none
    color: inherit

  > p
    font-size: 1.5em
    text-align: center

    > a
      text-decoration: none
      color: #0000FF

  > dl
    margin-top: 1em

    > dt.compact
      float: left
      clear: left

    > dd.compact
      float: right
      clear: right

  &.sequence > h1
    font-size: 1rem

.Map

.Search
  position: absolute
  top: 0
  bottom: 0
  left: 0
  right: 0
  background: #FFFFFF
  display: flex
  flex-direction: column

  &[hidden]
    display: none

  > :not(.results)
    flex: 0 0 $choice-glyph-size*2
    display: flex
    flex-direction: row
    gap: 1rem

    > a
      flex: 0 0 auto
      align-self: center
      font-size: 1.5rem
      height: 1em

    > input
      flex: 1 1 auto
      min-width: 0
      font-size: $choice-glyph-size

  > .results
    flex: 1 0 auto
    padding-top: 1em

    > div > div
      // react-window sets overflow:auto in @style
      overflow-y: scroll !important

.Search > div > div > div > ul,
.Detail.sequence > ul
  list-style: none
  margin: 0
  padding: 0

  > li
    margin: 0
    padding: 0

    > a
      // --ascent: calc(#{$choice-cell-size} - (#{$choice-cell-size} - #{$font-size}) / 2)
      // background: linear-gradient(to bottom, #00ff0080 0 var(--ascent), transparent var(--ascent) 100%)
      $font-size: 1rem

      display: block
      height: $choice-cell-size
      font-size: $font-size
      line-height: $choice-cell-size/$font-size
      text-decoration: none

      overflow: hidden
      white-space: nowrap
      text-overflow: ellipsis

  > li.sequence
    > a
      > span.label
        display: inline-block
        line-height: 1
        font-size: 0.75em
        vertical-align: middle

  .choice
    vertical-align: middle

.Detail.sequence
  > ul
    margin-top: 1em

.AliasHint
  line-height: 1
  font-size: 0.75rem
  padding: 0.25rem
  border: 1px solid
  border-radius: 0.5rem
  color: #606060

.AliasList
  position: relative
  list-style: none
  padding: 0 0 0 3rem

  > li
    // background: #00ff0080
    line-height: calc(1px + 0.25rem + 1 * 0.75rem + 0.25rem + 1px)

    > .marker
      // background: #ff00ff80
      width: 3rem
      position: absolute
      left: 0
      text-align: left

.choice
  $outline-size: 1px

  display: inline-block
  vertical-align: top
  width: $choice-cell-size
  height: $choice-cell-size

  font-size: $choice-glyph-size
  line-height: $choice-cell-size/$choice-glyph-size
  text-align: center
  text-decoration: none
  color: black

  outline: $outline-size solid #C0C0C0
  outline-offset: -$outline-size*3/2
  overflow: hidden // Firefox

  &.active
    background: #C0C0C0

    > .Display.synthetic
      color: #606060

.Display
  font-family: $display-font

  > .emoji
    font-family: Twitter Color Emoji, $display-font

  &.synthetic
    color: #A0A0A0

    &.tofu
      font-size: 0.5em
      font-family: monospace, monospace

      > span
        position: relative

      > span:first-child:nth-last-child(4)
        top: (-7em/12)
        left: 1ch

        + span
          top: (-7em/12)
          left: 1ch

          + span
            top: (3em/12)
            left: -1ch

            + span
              top: (3em/12)
              left: -1ch

      > span:first-child:nth-last-child(6)
        top: (-7em/12)
        left: 1.5ch

        + span
          top: (-7em/12)
          left: 1.5ch

          + span
            top: (-7em/12)
            left: 1.5ch

            + span
              top: (3em/12)
              left: -1.5ch

              + span
                top: (3em/12)
                left: -1.5ch

                + span
                  top: (3em/12)
                  left: -1.5ch

    &.diagonal
      font-size: 0.5em
      font-family: monospace, monospace

      > span:first-child:nth-last-child(2)
        vertical-align: (2em/12)

        + span
          vertical-align: (-1em/12)

      > span:first-child:nth-last-child(3)
        vertical-align: (4em/12)

        + span
          vertical-align: (1em/12)

          + span
            vertical-align: (-2em/12)

      > span:first-child:nth-last-child(4)
        vertical-align: (5em/12)

        + span
          vertical-align: (2em/12)

          + span
            vertical-align: (-1em/12)

            + span
              vertical-align: (-4em/12)

      > span:first-child:nth-last-child(5)
        vertical-align: (5em/12)

        + span
          vertical-align: (3em/12)

          + span
            vertical-align: (1em/12)

            + span
              vertical-align: (-1em/12)

              + span
                vertical-align: (-3em/12)

